--- a/.github/workflows/containerworkflow.yml
+++ b/.github/workflows/containerworkflow.yml
@@ -30,7 +30,7 @@ jobs:
       
       runs-on: ubuntu-latest
       
-      # if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/master'
 
       needs: build-deploy-image
       
