--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -2,22 +2,22 @@ name: Semgrep
 
 on:
   # Scan changed files in PRs (diff-aware scanning):
-  pull_request: {}
+  # pull_request: {}
   # Scan on-demand through GitHub Actions interface:
-  workflow_dispatch: {}
+  # workflow_dispatch: {}
 
   # workflow_call:
   
   # Scan mainline branches if there are changes to .github/workflows/semgrep.yml:
   push:
-    branches:
-      - main
-      - master
+    # branches:
+      # - main
+      # - master
     paths:
       - .github/workflows/semgrep.yml
   # Schedule the CI job (this method uses cron syntax):
-  schedule:
-    - cron: '20 17 * * *' # Sets Semgrep to scan every day at 17:20 UTC.
+  # schedule:
+    # - cron: '20 17 * * *' # Sets Semgrep to scan every day at 17:20 UTC.
     # It is recommended to change the schedule to a random time.
 
 permissions:
