--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -6,7 +6,7 @@ on:
   # Scan on-demand through GitHub Actions interface:
   # workflow_dispatch: {}
 
-  # workflow_call:
+  workflow_call:
   
   # Scan mainline branches if there are changes to .github/workflows/semgrep.yml:
   push:
