--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -4,7 +4,7 @@ on:
   # Scan changed files in PRs (diff-aware scanning):
   # pull_request: {}
   # Scan on-demand through GitHub Actions interface:
-  # workflow_dispatch: {}
+  workflow_dispatch: {}
 
   workflow_call:
   
