--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -2,7 +2,7 @@ name: Semgrep
 
 on:
   # Scan changed files in PRs (diff-aware scanning):
-  # pull_request: {}
+  pull_request: {}
   # Scan on-demand through GitHub Actions interface:
   workflow_dispatch: {}
 
@@ -38,7 +38,6 @@ jobs:
     if: (github.actor != 'dependabot[bot]')
     
     steps:
-      - run: echo "GH actor is ${{ github.actor }}."
       # Fetch project source with GitHub Actions Checkout. Use either v3 or v4.
       - uses: actions/checkout@v4
       # Run the "semgrep ci" command on the command line of the docker image.
