--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -9,12 +9,12 @@ on:
   workflow_call: {}
   
   # Scan mainline branches if there are changes to .github/workflows/semgrep.yml:
-  push:
+  # push:
     # branches:
       # - main
       # - master
-    paths:
-      - .github/workflows/semgrep.yml
+    # paths:
+    #   - .github/workflows/semgrep.yml
   # # Schedule the CI job (this method uses cron syntax):
   # schedule:
   #   - cron: '20 17 * * *' # Sets Semgrep to scan every day at 17:20 UTC.
