--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -3,10 +3,15 @@ name: Semgrep
 on:
   # Scan changed files in PRs (diff-aware scanning):
   # pull_request: {}
+  
   # Scan on-demand through GitHub Actions interface:
   workflow_dispatch: {}
-
-  workflow_call: {}
+  
+  # Scan on workflow call:
+  workflow_call:
+    secrets:
+      SEMGREP_APP_TOKEN:
+        required: true
   
   # Scan mainline branches if there are changes to .github/workflows/semgrep.yml:
   # push:
