--- a/.github/workflows/containerworkflow.yml
+++ b/.github/workflows/containerworkflow.yml
@@ -35,17 +35,20 @@ jobs:
 
       - run: docker build . -t ${{ env.IMAGE_NAME }}
       - run: docker push ${{ env.IMAGE_NAME }}
+
+  call-unit-tests:
+      needs: build-deploy-image
+      uses: ./.github/workflows/unit-testworkflow.yml
   
   deploy-to-aks:
+  
+    needs: call-unit-tests
     
     runs-on: ubuntu-latest
     
     # if: github.ref == 'refs/heads/master'
-
-    needs: build-deploy-image
     
     environment: PROD
-    
     #env:
       #NAMESPACE: dummy
     
