--- a/.github/workflows/localsemgrep.yml
+++ b/.github/workflows/localsemgrep.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Run Semgrep with local rules
         run: |
           export SEMGREP_SEND_METRICS=off
-          semgrep --config "p/default" --disable-nosem -c
+          semgrep --config "p/default" --disable-nosem --error --suppress-errors
